syntax = "proto3";

package eth;

service NodeCommuunications {

    rpc ServiceInfo (Empty) returns (ServiceVersion){
    }

    rpc EventGetGasPrice (Empty) returns (GasPrice){
    }

    rpc EventInitialAdd (UsersData) returns (ReplyInfo){
    }
        
    rpc EventAddNewAddress (WatchAddress) returns (ReplyInfo){
    }

    rpc EventGetBlockHeight (Empty) returns (BlockHeight){
    }

    rpc EventGetAdressNonce (AddressToResync) returns (Nonce){
    }

    rpc EventGetAdressBalance (AddressToResync) returns (Balance){
    }

    rpc EventGetAllMempool (Empty) returns (stream MempoolRecord){
    }

    rpc EventAddMempoolRecord (Empty) returns (stream MempoolRecord){
    }

    rpc EventDeleteMempool (Empty) returns (stream MempoolToDelete){
    }

    rpc EventResyncAddress (AddressToResync) returns (ReplyInfo){
    }

    rpc EventNewBlock (Empty) returns (stream BlockHeight){
    }

    rpc EventSendRawTx (RawTx) returns (ReplyInfo){
    }

    rpc NewTx (Empty) returns (stream ETHTransaction){
    }

    rpc SyncState (BlockHeight) returns (ReplyInfo){
    }

}

message Balance {
    string Balance = 1;
    string PendingBalance = 2;
}
message Nonce {
    int64 Nonce = 1;
}

message GasPrice {
    string Gas = 1;
}

message ETHTransaction {
    string UserID = 1;
    int32 WalletIndex = 2;
    int32 AddressIndex =3;                        
	string Hash = 4;                       
	string From = 5;                      
	string To = 6;  
    string Amount = 7;
	int64 GasPrice = 8;        
	int64 GasLimit = 9;          
	int32 Nonce = 10;         
	int32 Status = 11;      
    int64 BlockTime = 12;         
	int64 TxpoolTime = 13;        
	int64 BlockHeight = 14;
    bool Resync = 15;
}

message BlockHeight{
    int64 height = 1 ;
}

message MempoolToDelete {
   string hash = 1;
}

message WatchAddress {
   string address = 1;
   string userID = 2;
   int32 WalletIndex = 3; 
   int32 AddressIndex = 4;
}

 message MempoolRecord {
   int32 category = 1;    
   string hashTX = 2;
}

message Empty {
}

message RawTx {
   string transaction = 1;
}

message AddressToResync {
   string address = 1;
}


message UsersData {
    map<string, AddressExtended> map = 1;
}

message AddressExtended {
    string UserID = 1;    
	int32 WalletIndex = 2; 
	int32 AddressIndex = 3;
}


message ReplyInfo {
    string message = 1;
}

message ServiceVersion {
    string branch = 1;    
	string commit = 2;  
	string buildtime = 3; 
	string lasttag = 4;    
}
